--- a/istio/istio.peer-auth.yaml
+++ b/istio/istio.peer-auth.yaml
@@ -3,7 +3,7 @@ apiVersion: security.istio.io/v1beta1
 kind: PeerAuthentication
 metadata:
   name: webapp
-  namespace: demo
+  namespace: webapp-demo
 spec:
   mtls:
     mode: STRICT
