--- a/istio/istio.egress.yaml
+++ b/istio/istio.egress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: google
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: google
 spec:
@@ -24,7 +24,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
   name: google
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: google
 spec:
@@ -41,7 +41,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: google
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: google
 spec:
@@ -54,7 +54,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: google
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: google
 spec:
