--- a/istio/istio.ingress.yaml
+++ b/istio/istio.ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: webapp
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: webapp
 spec:
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: webapp
 spec:
@@ -42,7 +42,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: webapp
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: webapp
 spec:
@@ -70,7 +70,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: webapp
-  namespace: demo
+  namespace: webapp-demo
   labels:
     app: webapp
 spec:
