--- a/calico/deploy.client.yaml
+++ b/calico/deploy.client.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: client
-  namespace: webapp
+  namespace: webapp-demo
   labels:
     app: client
 spec:
@@ -21,7 +21,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: client
-  namespace: webapp
+  namespace: webapp-demo
   labels:
     app: client
 spec:
