--- a/calico/deploy.rogue.yaml
+++ b/calico/deploy.rogue.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rogue
-  namespace: webapp
+  namespace: webapp-demo
   labels:
     app: rogue
   annotations:
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rogue
-  namespace: webapp
+  namespace: webapp-demo
   labels:
     app: rogue
 spec:
@@ -45,7 +45,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rogue
-  namespace: webapp
+  namespace: webapp-demo
   labels:
     app: rogue
 spec:
