--- a/argocd/argo-application.yaml
+++ b/argocd/argo-application.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: argo-demo
   source:
-    repoURL: https://github.com/argoproj/argocd-example-apps.git
+    repoURL: git@github.com:stevegszabo/argocd-example-apps.git
     targetRevision: HEAD
     path: guestbook
   destination:
