--- a/argocd/argo-application.yaml
+++ b/argocd/argo-application.yaml
@@ -13,3 +13,8 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argo-demo
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: true
+      allowEmpty: false
