--- a/argocd/argo-application.yaml
+++ b/argocd/argo-application.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: guestbook
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   project: argo-demo
   source:
