--- a/argocd/argo-application-arcadia.yaml
+++ b/argocd/argo-application-arcadia.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook
+  name: arcadia
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
