--- a/argocd/argo-application-webapp.yaml
+++ b/argocd/argo-application-webapp.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook
+  name: webapp
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,7 +11,20 @@ spec:
   source:
     repoURL: git@github.com:stevegszabo/argocd-example-apps.git
     targetRevision: HEAD
-    path: guestbook
+    path: webapp
+    helm:
+      releaseName: webapp
+      parameters:
+      - name: image.repository
+        value: "notebook.local:5000/webapp"
+      - name: image.tag
+        value: "6.0.1"
+      - name: scaling.minReplicas
+        value: "1"
+      - name: ingress.enabled
+        value: "false"
+      - name: hpa.enabled
+        value: "false"
   destination:
     server: https://kubernetes.default.svc
     namespace: argo-demo
