--- a/argocd/argo-application-webapp.yaml
+++ b/argocd/argo-application-webapp.yaml
@@ -4,6 +4,11 @@ kind: Application
 metadata:
   name: webapp
   namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: webapp
+    argocd-image-updater.argoproj.io/webapp.update-strategy: latest
+    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/git-branch: master
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
