--- a/argocd/argo-application-webapp.yaml
+++ b/argocd/argo-application-webapp.yaml
@@ -5,10 +5,11 @@ metadata:
   name: webapp
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: webapp
+    argocd-image-updater.argoproj.io/image-list: webapp=notebook.local:5000/webapp
     argocd-image-updater.argoproj.io/webapp.update-strategy: latest
-    argocd-image-updater.argoproj.io/write-back-method: git
-    argocd-image-updater.argoproj.io/git-branch: master
+    argocd-image-updater.argoproj.io/webapp.helm.image-name: image.repository
+    argocd-image-updater.argoproj.io/webapp.helm.image-tag: image.tag
+    argocd-image-updater.argoproj.io/write-back-method: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
