--- a/argocd/argo-application-webapp.yaml
+++ b/argocd/argo-application-webapp.yaml
@@ -9,7 +9,8 @@ metadata:
     argocd-image-updater.argoproj.io/webapp.update-strategy: latest
     argocd-image-updater.argoproj.io/webapp.helm.image-name: image.repository
     argocd-image-updater.argoproj.io/webapp.helm.image-tag: image.tag
-    argocd-image-updater.argoproj.io/write-back-method: argocd
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/repo-private-ssh
+    argocd-image-updater.argoproj.io/git-branch: master
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -24,7 +25,7 @@ spec:
       - name: image.repository
         value: "notebook.local:5000/webapp"
       - name: image.tag
-        value: "6.0.1"
+        value: "6.0.4"
       - name: scaling.minReplicas
         value: "1"
       - name: ingress.enabled
