--- a/argocd/argo-application-webapp.yaml
+++ b/argocd/argo-application-webapp.yaml
@@ -2,13 +2,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: webapp
+  name: recluse
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: webapp=notebook.local:5000/webapp
-    argocd-image-updater.argoproj.io/webapp.update-strategy: latest
-    argocd-image-updater.argoproj.io/webapp.helm.image-name: image.repository
-    argocd-image-updater.argoproj.io/webapp.helm.image-tag: image.tag
+    argocd-image-updater.argoproj.io/image-list: recluse=notebook.local:5000/webapp
+    argocd-image-updater.argoproj.io/recluse.update-strategy: latest
+    argocd-image-updater.argoproj.io/recluse.helm.image-name: image.repository
+    argocd-image-updater.argoproj.io/recluse.helm.image-tag: image.tag
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/repo-private-ssh
     argocd-image-updater.argoproj.io/git-branch: master
   finalizers:
@@ -20,31 +20,31 @@ spec:
     targetRevision: HEAD
     path: webapp
     helm:
-      releaseName: webapp
-      parameters:
-      - name: image.repository
-        value: "notebook.local:5000/webapp"
-      - name: image.tag
-        value: "6.1.8"
-      - name: scaling.minReplicas
-        value: "1"
-      - name: ingress.enabled
-        value: "false"
-      - name: hpa.enabled
-        value: "false"
-      - name: resources.requests.cpu
-        value: "100m"
-      - name: resources.requests.memory
-        value: "64M"
-      - name: resources.limits.cpu
-        value: "200m"
-      - name: resources.limits.memory
-        value: "128M"
+      releaseName: recluse
+      values: |
+        image:
+          repository: notebook.local:5000/webapp
+          tag: 6.2.3
+        annotations:
+          kubernetes.io/change-cause: "recluse-003"
+        scaling:
+          minReplicas: 4
+        ingress:
+          enabled: false
+        hpa:
+          enabled: false
+        resources:
+          requests:
+            cpu: 103m
+            memory: 64M
+          limits:
+            cpu: 200m
+            memory: 128M
   destination:
     server: https://kubernetes.default.svc
     namespace: argo-demo
-  syncPolicy:
-    automated:
-      prune: false
-      selfHeal: true
-      allowEmpty: false
+##  syncPolicy:
+##    automated:
+##      prune: false
+##      selfHeal: true
+##      allowEmpty: false
