--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,8 +1,15 @@
 name: docker-build
 on: [push]
 jobs:
-  checkout-and-build-image:
+  image-build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: uname -a
+    - uses: actions/checkout@v2
+    - run: uname -a
+  image-push:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
