--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,11 +1,11 @@
 name: docker-build
 on: [push]
 jobs:
-  image-build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - run: pushd docker && ./build.sh $(date +%s)
+#  image-build:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v2
+#    - run: pushd docker && ./build.sh $(date +%s)
   image-push:
     runs-on: ubuntu-latest
     steps:
