--- a/.github/workflows/webapp.yaml
+++ b/.github/workflows/webapp.yaml
@@ -1,7 +1,7 @@
 name: webapp
 on: [push]
 jobs:
-  webapp-image-build-and-push:
+  image-build-and-push:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
