--- a/argocd/argo-application-webapp-rollout.yaml
+++ b/argocd/argo-application-webapp-rollout.yaml
@@ -2,20 +2,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: rollout-bluegreen
+  name: webapp
 spec:
-  replicas: 2
-  revisionHistoryLimit: 2
+  replicas: 4
+  revisionHistoryLimit: 5
   selector:
     matchLabels:
-      app: rollout-bluegreen
+      app: webapp
   template:
     metadata:
       labels:
-        app: rollout-bluegreen
+        app: webapp
     spec:
       containers:
-      - name: rollouts-demo
+      - name: webapp
         image: docker.io/steveszabo/webapp:ea5400a
         ports:
         - containerPort: 8080
@@ -23,11 +23,11 @@ spec:
     blueGreen: 
       # activeService specifies the service to update with the new template hash at time of promotion.
       # This field is mandatory for the blueGreen update strategy.
-      activeService: rollout-bluegreen-active
+      activeService: webapp-active
       # previewService specifies the service to update with the new template hash before promotion.
       # This allows the preview stack to be reachable without serving production traffic.
       # This field is optional.
-      previewService: rollout-bluegreen-preview
+      previewService: webapp-preview
       # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
       # immediately before the promotion. If omitted, the default behavior is to promote the new
       # stack as soon as the ReplicaSet are completely ready/available.
@@ -35,26 +35,26 @@ spec:
       autoPromotionEnabled: false
 
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: rollout-bluegreen-active
+  name: webapp-active
 spec:
   selector:
-    app: rollout-bluegreen
+    app: webapp
   ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
 
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: rollout-bluegreen-preview
+  name: webapp-preview
 spec:
   selector:
-    app: rollout-bluegreen
+    app: webapp
   ports:
   - protocol: TCP
     port: 80
