--- a/argocd/src/argo-rollouts-1.1.0-rc2/manifests/install.yaml
+++ b/argocd/src/argo-rollouts-1.1.0-rc2/manifests/install.yaml
@@ -13145,13 +13145,30 @@ spec:
       labels:
         app.kubernetes.io/name: argo-rollouts
     spec:
+      securityContext:
+        runAsNonRoot: true
+      serviceAccountName: argo-rollouts
       containers:
-      - image: quay.io/argoproj/argo-rollouts:latest
+      - image: quay.io/argoproj/argo-rollouts:v1.1.0-rc1
         imagePullPolicy: Always
         name: argo-rollouts
         ports:
         - containerPort: 8090
           name: metrics
-      securityContext:
-        runAsNonRoot: true
-      serviceAccountName: argo-rollouts
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /metrics
+            port: 8090
+          initialDelaySeconds: 30
+          periodSeconds: 20
+          successThreshold: 1
+          timeoutSeconds: 10
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /metrics
+            port: 8090
+          periodSeconds: 5
+          successThreshold: 1
+          timeoutSeconds: 4
