--- a/vault/vault-cluster-role-binding.yaml
+++ b/vault/vault-cluster-role-binding.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
    name: vault-auth
-   namespace: default
+   namespace: argo-demo
 roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
@@ -11,4 +11,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: vault-auth
-  namespace: default
+  namespace: argo-demo
