--- a/vault/vault.config.yaml
+++ b/vault/vault.config.yaml
@@ -2,6 +2,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  name: vault-cluster-auth
+  namespace: default
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
   name: vault-auth
   namespace: argo-demo
 
@@ -9,13 +16,12 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: vault-auth
-  namespace: argo-demo
+  name: vault-cluster-auth
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: vault-auth
-  namespace: argo-demo
+  name: vault-cluster-auth
+  namespace: default
