--- a/argocd/argo-project.yaml
+++ b/argocd/argo-project.yaml
@@ -13,3 +13,19 @@ spec:
   destinations:
   - namespace: argo-demo
     server: https://kubernetes.default.svc
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: hashi-demo
+  namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  description: Argo demo project
+  sourceRepos:
+  - git@github.com:stevegszabo/argocd-example-apps.git
+  destinations:
+  - namespace: hashi-demo
+    server: https://kubernetes.default.svc
