--- a/argocd/argo-project.yaml
+++ b/argocd/argo-project.yaml
@@ -29,3 +29,6 @@ spec:
   destinations:
   - namespace: hashi-demo
     server: https://kubernetes.default.svc
+  clusterResourceWhitelist:
+  - group: ''
+    kind: PersistentVolume
