--- a/argocd/argo-application-webapp.yaml
+++ b/argocd/argo-application-webapp.yaml
@@ -32,11 +32,11 @@ spec:
           vault.hashicorp.com/agent-inject-command-webapp: "id"
           vault.hashicorp.com/agent-inject-template-webapp: |
             {{- with secret "secret/webapp/config" -}}
-            MYSQL_USERNAME={{ .Data.data.username }}
-            MYSQL_PASSWORD={{ .Data.data.password }}
-            export MYSQL_USERNAME MYSQL_PASSWORD
+            POSTGRES_USER={{ .Data.data.POSTGRES_USER }}
+            POSTGRES_PASSWORD={{ .Data.data.POSTGRES_PASSWORD }}
+            export POSTGRES_USER
             {{- end }}
-          vault.hashicorp.com/auth-path: "auth/dev-cluster"
+          vault.hashicorp.com/auth-path: "auth/eng-cluster"
           vault.hashicorp.com/role: "webapp"
           vault.hashicorp.com/tls-skip-verify: "false"
         scaling:
