--- a/argocd/vendor.install-rollouts.yaml
+++ b/argocd/vendor.install-rollouts.yaml
@@ -13002,6 +13002,18 @@ rules:
   verbs:
   - list
   - get
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+  - watch
+  - get
+  - update
+  - list
+  - delete
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
