--- a/argocd/vendor.rollout.yaml
+++ b/argocd/vendor.rollout.yaml
@@ -1,3 +1,18 @@
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: rollouts-demo
+spec:
+  ports:
+  - port: 80
+    targetPort: http
+    protocol: TCP
+    name: http
+  selector:
+    app: rollouts-demo
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
