--- a/argocd/argo-application-webapp-rollout-canary.yaml
+++ b/argocd/argo-application-webapp-rollout-canary.yaml
@@ -14,6 +14,30 @@ spec:
 
 ---
 apiVersion: argoproj.io/v1alpha1
+kind: AnalysisTemplate
+metadata:
+  name: webapp
+spec:
+  args:
+  - name: service-name
+  metrics:
+  - name: webapp
+    interval: 5m
+    successCondition: result[0] >= 0.95
+    failureLimit: 3
+    provider:
+      prometheus:
+        address: http://prometheus.istio-system.svc.cluster.local:9090
+        query: |
+          sum(irate(
+            istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}",response_code!~"5.*"}[5m]
+          )) /
+          sum(irate(
+            istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}"}[5m]
+          ))
+
+---
+apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: webapp
@@ -22,13 +46,20 @@ spec:
     canary:
       steps:
       - setWeight: 20
-      - pause: {}
+      - pause: {duration: 10m}
       - setWeight: 40
-      - pause: {duration: 10}
+      - pause: {duration: 10m}
       - setWeight: 60
-      - pause: {duration: 10}
+      - pause: {duration: 10m}
       - setWeight: 80
-      - pause: {duration: 10}
+      - pause: {duration: 10m}
+      analysis:
+        templates:
+        - templateName: webapp
+        startingStep: 2
+        args:
+        - name: service-name
+          value: webapp.argo-demo.svc.cluster.local
   replicas: 5
   revisionHistoryLimit: 10
   selector:
