--- a/argocd/argo-application-webapp-rollout-canary.yaml
+++ b/argocd/argo-application-webapp-rollout-canary.yaml
@@ -13,6 +13,43 @@ spec:
     app: webapp
 
 ---
+apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: webapp
+spec:
+  host: webapp.argo-demo.svc.cluster.local
+  subsets:
+  - name: v1
+    labels:
+      app: webapp
+      version: v1
+
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: webapp
+spec:
+  hosts:
+  - webapp.argo-demo.svc.cluster.local
+  gateways:
+  - mesh
+  http:
+  - route:
+    - destination:
+        host: webapp.argo-demo.svc.cluster.local
+        subset: v1
+        port:
+          number: 8080
+      weight: 100
+    timeout: 60s
+    retries:
+      attempts: 3
+      perTryTimeout: 5s
+      retryOn: gateway-error,connect-failure,refused-stream
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
@@ -61,10 +98,12 @@ spec:
   selector:
     matchLabels:
       app: webapp
+      version: v1
   template:
     metadata:
       labels:
         app: webapp
+        version: v1
     spec:
       containers:
       - name: webapp
