--- a/argocd/argo-application-guestbook.yaml
+++ b/argocd/argo-application-guestbook.yaml
@@ -13,7 +13,7 @@ spec:
     targetRevision: HEAD
     path: guestbook
   destination:
-    server: https://kubernetes.default.svc
+    server: https://10.0.2.15:6443
     namespace: argo-demo
   syncPolicy:
     automated:
