--- a/gatekeeper/helm/values.yaml
+++ b/gatekeeper/helm/values.yaml
@@ -35,7 +35,7 @@ podLabels: {}
 podCountLimit: 100
 secretAnnotations: {}
 controllerManager:
-  exemptNamespaces: ["argo-rollouts","argocd","calico-apiserver","calico-system","default","gatekeeper","hashi-demo","istio-operator","istio-system","kube-node-lease","kube-public","kube-system","tigera-operator","vault"]
+  exemptNamespaces: []
   hostNetwork: false
   port: 8443
   metricsPort: 8888
