--- a/gatekeeper/mybanknamespace/deploy-namespace.yaml
+++ b/gatekeeper/mybanknamespace/deploy-namespace.yaml
@@ -4,5 +4,5 @@ kind: Namespace
 metadata:
   name: sample
   labels:
-    bad-environment: eng
-    bad-application: sample
+    environment: eng
+    application: sample
