--- a/gatekeeper/mybanknamespace/deploy-namespace.yaml
+++ b/gatekeeper/mybanknamespace/deploy-namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sample
+  name: mybanknamespace
   labels:
     environment: eng
     application: sample
